<?xml version="1.0"?>
<package format="2">
  <name>ros_industrial_codegen</name>
  <version>0.0.0</version>
  <description>Generic Industrial Robotic Native Code Generator</description>
  <author>Albert Nubiola</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <maintainer email="Austin.Deric@gmail.com">Austin Deric</maintainer>
  <license>Apache2.0</license>

  <url type="repository">https://github.com/ros-industrial/robodk_postprocessors</url>
  <url type="bugtracker">https://github.com/ros-industrial/robodk_postprocessors/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>genmsg</depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>

